# sonar-room

./: .gitignore  AGENTS.md  components.json  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.codex/skills/harness-intake-griller/: SKILL.md
apps/desktop/: index.html  package.json  postcss.config.cjs  project.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CONTEXT_RULES.md  TEST_MATRIX.md  WORKSPACE_IMPORT_RULES.md
docs/decisions/: 0008-desktop-tech-stack.md  0009-thin-apps-and-business-libraries.md  0010-atomic-shared-ui-composition.md  0011-feature-library-boundary.md  0012-tailwind-design-token-usage.md  0013-open-design-mcp-gate.md  0014-open-design-icon-replacement.md  0015-atomic-modular-page-ui-structure.md  0016-provider-webview-playback-policy.md  0017-unauthenticated-youtube-music-url-mvp.md  0018-invisible-youtube-music-playback-policy-gate.md  0019-visible-youtube-iframe-playback-mvp.md
docs/product/: README.md  overview.md
docs/stories/: backlog.md
libs/features/app-shell/: project.json  tsconfig.lib.json
libs/features/launcher/: project.json  tsconfig.lib.json
libs/features/music/: project.json  tsconfig.lib.json
libs/types/: project.json  tsconfig.lib.json
libs/types/src/: index.ts
libs/ui/: project.json  tsconfig.lib.json
(+60 files in other folders)
