[package]
name = "sonar-room-desktop"
version = "0.1.0"
description = "Sonar Room desktop shell"
authors = ["Sonar Room"]
edition = "2021"

[lib]
name = "sonar_room_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
